--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,14 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
   background-color: var(--background-color, #f5f5f5);
   background-size: cover;
   background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
 .description {
@@ -82,7 +83,8 @@
   align-items: center;
   position: relative;
   padding: 4rem 0;
-  min-height: 100vh;
+  width: 100%;
+  flex-grow: 1;
 }
 
 
@@ -108,6 +110,20 @@
   position: absolute;
   filter: blur(45px);
   transform: translateZ(0);
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.footer {
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
 }
 
 .logo {
